--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ limits[memcached]==4.0.1
 coloredlogs==15.0.1
 printedcolors==1.0.0
 pymemcache==4.0.0
-tiktoken==0.3.3
-Pillow==9.5.0
+tiktoken==0.6.0
+pillow==11.0.0
